--- a/src/main/resources/public/Sobre.html
+++ b/src/main/resources/public/Sobre.html
@@ -76,6 +76,16 @@
             <div class = "row">
                 <div class = col-12>
                     <div class = row>
+                        <!--Guilherme Rodrigues Viana Saraiva-->
+                        <div class = "col-lg-6">
+                            <div class = "mr-5  ml-5">
+                                <div class = "circle">
+                                    <img src = "Imagem/Guilherme.png" class = "card-img-top" alt = "Descrição">
+                                </div>
+                                <h4 class = "CriadoresTitulo mt-5">Guilherme Rodrigues Viana Saraiva</h4>
+                                <p class = "SobreP">Estudante de Publicidade e Propaganda na PUC Minas.</p>
+                            </div>
+                        </div>
                         <!--Letícia Americano Lucas-->
                         <div class = "col-lg-6">
                             <div class = "mr-5  ml-5">
@@ -83,17 +93,7 @@
                                     <img src = "Imagem/Letícia.png" class = "card-img-top" alt = "Descrição">
                                 </div>
                                 <h4 class = "CriadoresTitulo mt-5">Letícia Americano Lucas</h4>
-                                <p class = "SobreP">Estudante de Ciências da Computação da PUC Minas, 18 anos.</p>
-                            </div>
-                        </div>
-                        <!--Ludmila Bruna Santos Nascimento-->
-                        <div class = "col-lg-6">
-                            <div class = "mr-5  ml-5">
-                                <div class = "circle">
-                                    <img src = "Imagem/Ludmila.png" class = "card-img-top" alt = "Descrição">
-                                </div>
-                                <h4 class = "CriadoresTitulo mt-5">Ludmila Bruna Santos Nascimento</h4>
-                                <p class = "SobreP">Estudante de Ciência da Computação na PUC Minas, 24 anos</p>
+                                <p class = "SobreP">Estudante de Ciências da Computação da PUC Minas.</p>
                             </div>
                         </div>
                     </div>
@@ -109,17 +109,17 @@
                                     <img src = "Imagem/Marcos.png" class = "card-img-top" alt = "Descrição">
                                 </div>
                                 <h4 class = "CriadoresTitulo mt-5">Marcos Ani Cury Vingre Silva</h4>
-                                <p class = "SobreP">Estudante de Ciência da Computação da PUC Minas, 19 anos.<br>Curso Técnico completo em Informática.</p>
+                                <p class = "SobreP">Estudante de Ciência da Computação da PUC Minas.<br>Curso Técnico completo em Informática.</p>
                             </div>
                         </div>
-                        <!--Victor Leite de Andrade-->
+                        <!--Samuel Soares Macedo Leão e Silva-->
                         <div class = "col-lg-6">
                             <div class = "mr-5 ml-5">
                                 <div class = "circle">
-                                    <img src = "Imagem/Victor.png" class = "card-img-top" alt =  "Descrição">
+                                    <img src = "Imagem/Samuel.png" class = "card-img-top" alt =  "Descrição">
                                 </div>
-                                <h5 class = "CriadoresTitulo mt-5">Victor Leite de Andrade</h5>
-                                <p class = "SobreP">Estudante de Ciência da Computação da PUC Minas, 19 anos.</p>
+                                <h5 class = "CriadoresTitulo mt-5">Samuel Soares Macedo Leão e Silva</h5>
+                                <p class = "SobreP">Estudante de Publicidade e Propaganda.</p>
                             </div>
                         </div>
                     </div>
