--- a/src/main/resources/public/Registrar.html
+++ b/src/main/resources/public/Registrar.html
@@ -22,7 +22,7 @@
                 <div class = "container-margin-login">
                     <h3 class = "mb-3 mt-3 font-weight-light Registrar_Letra">Cadastre-se</h3>
                     <div class = "Registrar_Letra mt-3 mb-3">
-                        <p>Já possui uma conta?<a href = "Index.html" class = "Registrar_Letra"> Conecte-se</a></p>
+                        <p>Já possui uma conta?<a href = "index.html" class = "Registrar_Letra"> Conecte-se</a></p>
                     </div>
                     <!--Endereço de Email-->
                     <div class = "mb-3"> 
