--- a/src/main/resources/public/Senha.html
+++ b/src/main/resources/public/Senha.html
@@ -16,7 +16,7 @@
             <div style = "background-color: #88e8dc;"><br></div>
         </header>
         <main class = "Main text-center container-fluid " id = "Main">
-            <a href = "Index.html"><img src = "Imagem/Logo_Inscreva.png" class = "text-center mt-5 mb-3 rounded"></a>
+            <a href = "index.html"><img src = "Imagem/Logo_Inscreva.png" class = "text-center mt-5 mb-3 rounded"></a>
             <form class = "form-signin" id = "form-login">
                 <div class = "container-margin-login">
                     <h3 class = "mb-3 font-weight-light SenhaLetra"><b>Esqueceu sua senha?</b></h3>
