--- a/src/main/resources/public/Alterar.html
+++ b/src/main/resources/public/Alterar.html
@@ -35,7 +35,7 @@
                             </li>
                             <!--Sair-->
                             <li class = "nav-item text-center">
-                                <a class = "nav-link Header_Menu nav-item-custom text-white" id = "sair" href = "Index.html">Sair</a>
+                                <a class = "nav-link Header_Menu nav-item-custom text-white" id = "sair" href = "index.html">Sair</a>
                             </li>
                         </ul>
                     </div>
